(executable
 (name opixelserv)
 (public_name opixelserv)
 (modules
  my_io
  my_conduit_lwt_unix
  my_server
  opixelserv)
 (libraries
  cohttp
  cohttp-lwt-unix
  lwt)
 (package opixelserv))

(executable
 (name opixtest)
 (public_name opixtest)
 (modules
  opixtest
  responses)
 (libraries
  tls
  tls.lwt
  lwt
  lwt.unix)
 (package opixelserv))
